# dual-problems

./: .gitignore  Makefile  amsfonts.sty  amssymb.sty  dual-problems.bib  dual-problems.tex  graphicx.sty
.github/workflows/: compile.yml
ci/: Dockerfile
demos/convergence-tests/: Makefile  ice_shelf.py  ice_stream.py  make_plots.py
demos/dualform/: pyproject.toml
demos/dualform/src/dualform/: __init__.py  ice_shelf.py  ice_stream.py  viscosity.py
demos/gibbous-ice-shelf/: Makefile  benchmark.py  gibbous.py  gibbous_inputs.py  make_plots.py  primal_dual_calving.py
demos/ice-shelf/: convergence_test.py  ice-shelf.py  ice_shelf.py  make-plots.py
demos/kangerd/: Makefile  extrapolate.py  initialize.py  kangerdlugssuaq-enlarged.geojson  make_plots.py  mar.py  simulate.py
demos/larsen/: Makefile  extrapolate.py  initialize.py  larsen.geojson  make_plots.py  simulate.py
demos/linear-ice-shelf/: Makefile  convergence_test.py  make_plots.py
demos/linear-ice-stream/: Makefile  make_plots.py
demos/mismip/: Makefile  make_plots.py  mismip.py
demos/p-laplace/: laplace.py
demos/singularity/: Makefile  singularity.py
demos/slab/: Makefile  figure_settings.py  functions.py  run_several.py  slab.py
docker/: Dockerfile
