[project]
name = "dualform"
version = "0.0.1"
authors = [
    { name="Daniel Shapero", email="shapero@uw.edu" },
    { name="Gonzalo Gonzalez de Diego", email="Gonzalo.GonzalezDeDiego@maths.ox.ac.uk" },
]
description = "Dual forms of momentum conservation equations for ice flow"
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/icepack/dual-problems"
